# datafusion

./: CHANGELOG.md  Cargo.toml  README.md  searchindex.js
.github/workflows/: dev.yml  docs.yaml  extended.yml  rust.yml
_sources/contributor-guide/: index.md.txt
benchmarks/: README.md  bench.sh
benchmarks/src/tpch/: run.rs
contributor-guide/: index.html
datafusion/: Cargo.toml
datafusion-cli/src/: command.rs  exec.rs  lib.rs  print_format.rs  printer.rs
datafusion-examples/examples/: json_opener.rs  simple_udwf.rs
datafusion/common/src/: config.rs  dfschema.rs  display.rs  lib.rs  stats.rs
datafusion/core/: Cargo.toml
datafusion/core/benches/: write_threads.rs
datafusion/core/src/: dataframe.rs  lib.rs  physical_planner.rs
datafusion/core/tests/: core_integration.rs  custom_sources.rs  path_partition.rs
datafusion/datasource-csv/src/: source.rs
datafusion/datasource/src/: source.rs  statistics.rs
datafusion/execution/: Cargo.toml
datafusion/expr-common/src/: groups_accumulator.rs
datafusion/expr/src/: accumulator.rs  built_in_function.rs  expr_fn.rs  partition_evaluator.rs  udaf.rs  udf.rs
datafusion/functions/: Cargo.toml
datafusion/functions/src/: lib.rs
datafusion/optimizer/src/: optimizer.rs
datafusion/physical-expr/: Cargo.toml
datafusion/physical-expr-common/: Cargo.toml
datafusion/physical-expr-common/src/: sort_expr.rs
datafusion/physical-expr/src/: analysis.rs  array_expressions.rs  binary_map.rs  functions.rs  sort_expr.rs
datafusion/physical-optimizer/src/: filter_pushdown.rs
datafusion/physical-plan/: Cargo.toml
datafusion/physical-plan/src/: analyze.rs  coalesce_batches.rs  coalesce_partitions.rs  common.rs  display.rs  empty.rs  execution_plan.rs  explain.rs  filter.rs  insert.rs  lib.rs  limit.rs  memory.rs  planner.rs  projection.rs  statistics.rs  stream.rs  streaming.rs  udaf.rs  union.rs  unnest.rs  values.rs
datafusion/physical-plan/src/aggregates/: bounded_aggregate_stream.rs  mod.rs  no_grouping.rs  row_hash.rs  utils.rs
datafusion/physical-plan/src/joins/: cross_join.rs  hash_join.rs  hash_join_utils.rs  nested_loop_join.rs  sort_merge_join.rs  symmetric_hash_join.rs  utils.rs
datafusion/physical-plan/src/repartition/: mod.rs
datafusion/physical-plan/src/sorts/: cursor.rs  merge.rs  sort.rs  sort_preserving_merge.rs  stream.rs
datafusion/physical-plan/src/windows/: bounded_window_agg_exec.rs  mod.rs  window_agg_exec.rs
datafusion/proto/src/: lib.rs
datafusion/proto/testdata/: tpch.sql
datafusion/sql/src/: statement.rs
datafusion/sqllogictest/test_files/: aggregate.slt  explain.slt  group_by.slt  information_schema.slt  joins.slt  parquet_bloom.slt  union.slt  update.slt
datafusion/statistics/: Cargo.toml  README.md
docs/: .htaccess
docs/source/: index.rst
(+111 files in other folders)
