# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-physical-plan"
description = "Physical `ExecutionPlan` implementation for DataFusion query engine"
keywords = ["arrow", "query", "sql"]
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lib]
name = "datafusion_physical_plan"
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = "0.1.41"
blake2 = { version = "^0.10.2", optional = true }
blake3 = { version = "1.0", optional = true }
chrono = { version = "0.4.23", default-features = false }
datafusion-common = { path = "../common", version = "26.0.0" }
datafusion-execution = { path = "../execution", version = "26.0.0" }
datafusion-expr = { path = "../expr", version = "26.0.0" }
datafusion-row = { path = "../row", version = "26.0.0" }
datafusion-physical-expr = { path = "../physical-expr", version = "26.0.0", default-features = false }
futures = "0.3"
hashbrown = { version = "0.14", features = ["raw"] }
indexmap = "1.9.2"
itertools = { version = "0.11", features = ["use_std"] }
log = "^0.4"
md-5 = { version = "^0.10.0", optional = true }
pin-project-lite = "^0.2.7"
parking_lot = "0.12"
regex = { version = "1.8", optional = true }
sha2 = { version = "^0.10.1", optional = true }
smallvec = { version = "1.6", features = ["union"] }
tempfile = "3"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs", "parking_lot"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.8"
rstest = "0.17.0"
# TODO remove this dependency by moving tests as needed
datafusion = {path = "../core"}